// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPrice should apply the format if one is provided 1`] = `
<span
  className="price wc-block-components-product-price"
>
  pre price 
  <span
    className="screen-reader-text"
  >
    Previous price:
  </span>
  <span
    className="wc-block-number-format-container"
  >
    <del
      className="wc-block-components-product-price__regular"
      style={
        {
          "direction": "ltr",
          "unicodeBidi": "bidi-override",
        }
      }
    >
      £1.00
    </del>
  </span>
  <span
    className="screen-reader-text"
  >
    Discounted price:
  </span>
  <span
    className="wc-block-number-format-container"
  >
    <ins
      className="wc-block-components-product-price__value is-discounted"
      style={
        {
          "direction": "ltr",
          "unicodeBidi": "bidi-override",
        }
      }
    >
      £0.50
    </ins>
  </span>
   Test format
</span>
`;

exports[`ProductPrice should use default price if no format is provided 1`] = `
<span
  className="price wc-block-components-product-price"
>
  <span
    className="screen-reader-text"
  >
    Previous price:
  </span>
  <span
    className="wc-block-number-format-container"
  >
    <del
      className="wc-block-components-product-price__regular"
      style={
        {
          "direction": "ltr",
          "unicodeBidi": "bidi-override",
        }
      }
    >
      £1.00
    </del>
  </span>
  <span
    className="screen-reader-text"
  >
    Discounted price:
  </span>
  <span
    className="wc-block-number-format-container"
  >
    <ins
      className="wc-block-components-product-price__value is-discounted"
      style={
        {
          "direction": "ltr",
          "unicodeBidi": "bidi-override",
        }
      }
    >
      £0.50
    </ins>
  </span>
</span>
`;
